objects/Partner_MBO__c.object
<CustomObject>
    <fields>
        <fullName>Enrollment_Period__c</fullName>
        <description>This will indicate enrollment period from the linked enrollment .</description>
        <formula>TEXT(MBO_Partner_Enrollment__r.Enrollment_Period__c)</formula>
        <label>Enrollment Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Target_Percent__c</fullName>
        <description>Yearly Target Percentage Value provided by the Admin</description>
        <label>FY Target Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_Target__c</fullName>
        <description>Yearly Target Value calculated from PPE</description>
        <label>FY Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Linitm_Id__c</fullName>
        <description>ID used to integrate with PPP</description>
        <externalId>true</externalId>
        <label>Linitm_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBO_Description__c</fullName>
        <description>Description provided by the Admin</description>
        <label>MBO Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MBO_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference of MBO Line Item from which Partner MBO got created.</description>
        <label>MBO Item</label>
        <referenceTo>MBO_Item__c</referenceTo>
        <relationshipName>MBOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBO_Partner_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference of Partner Enrollment for which the Partner MBO is assigned.</description>
        <label>MBO Partner Enrollment</label>
        <referenceTo>MBO_Partner_Enrollment__c</referenceTo>
        <relationshipName>Partner_MBOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference of Master MBO from which the Partner MBO got created.</description>
        <label>MBO</label>
        <referenceTo>Master_MBO__c</referenceTo>
        <relationshipName>PMBOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Measure_Unit__c</fullName>
        <description>Measure Unit for the Partner MBO</description>
        <label>Measure Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <description>Measure for the Partner MBO</description>
        <label>Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <description>Objective to the Partner from this Partner MBO</description>
        <label>Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>MBO_Partner_Enrollment__r.Partner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner reference for whom the Partner MBO is assigned.</description>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PMBOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>MBO_Partner_Enrollment__r.Program_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_Target_Percent__c</fullName>
        <description>Q1 Target  Percentage Value provided by Admin</description>
        <label>Q1 Target Percent</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_Target__c</fullName>
        <description>Q1 Target  Value calculated from PPP</description>
        <label>Q1 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Target_Percent__c</fullName>
        <description>Q2 Target  Percentage Value provided by Admin</description>
        <label>Q2 Target Percent</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Target__c</fullName>
        <description>Q2 Target  Value calculated from PPP</description>
        <label>Q2 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Target_Percent__c</fullName>
        <description>Q3 Target  Percentage Value provided by Admin</description>
        <label>Q3 Target Percent</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Target__c</fullName>
        <description>Q3 Target  Value calculated from PPE</description>
        <label>Q3 Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Segment for which this Partner MBO applies.</description>
        <label>Segment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Partner MBO</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De-Activated</fullName>
                </value>
                <value>
                    <fullName>Target_Calc_InProgress</fullName>
                </value>
                <value>
                    <fullName>Target_Assigned</fullName>
                </value>
                <value>
                    <fullName>Ready For Assignment</fullName>
                </value>
                <value>
                    <fullName>Targets To Be Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Track__c</fullName>
        <description>Will tell whether this Partner MBO applies Product or Service deals.</description>
        <label>Sub Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRODUCT</fullName>
                    <default>true</default>
                    <label>PRODUCT</label>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Target Percentage.</description>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <description>Track of the Partner Group derived through MBO Program</description>
        <formula>MBO_Partner_Enrollment__r.Track_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track</label>
        <type>Text</type>
    </fields>
    <description>Partner MBO object is used to create instance of MBOs which is assigned for Partner with Target Percentages and Targets which are calculated from PPE.</description>
    <label>Partner MBO</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner MBO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner__c</columns>
        <columns>Status__c</columns>
        <columns>MBO_Description__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Track__c</columns>
        <columns>Sub_Track__c</columns>
        <columns>Segment__c</columns>
        <columns>Objective__c</columns>
        <columns>FY_Target__c</columns>
        <columns>Q1_Target__c</columns>
        <columns>Q2_Target__c</columns>
        <columns>Q3_Target__c</columns>
        <columns>Q4_Target__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>